--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     
 </head>
 <body>
-    
-    <video  id="myVideo" muted>
-        <source src="video.mp4" type="video/mp4">
+    <button accesskey="w" onclick="changeSrc('video2.mp4',vid)">dadadadad</button>
+    <video  id="backgroundVideo" muted>
+        <source id="backgroundVideoSrc" src="video.mp4" type="video/mp4">
     </video>
     <script src="scripts.js"></script>
+
 </body>
 </html>
