--- a/index.html
+++ b/index.html
@@ -10,11 +10,31 @@
     
 </head>
 <body>
-    <button accesskey="w" onclick="changeSrc('video2.mp4',vid)">dadadadad</button>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js" integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <video  id="backgroundVideo" muted>
-        <source id="backgroundVideoSrc" src="video.mp4" type="video/mp4">
+        <source id="backgroundVideoSrc" src="video1.mp4" type="video/mp4">
     </video>
-    <script src="scripts.js"></script>
 
+
+
+    <img src="https://en.js.cx/clipart/ball.svg" id="ball">
+    <script src="scripts.js"></script>
+    <table id="inventory" class="droppable">
+        <tr>
+            <td class="droppable"> 
+                <img src="https://en.js.cx/clipart/soccer-gate.svg" id="gate" >
+            </td>
+            <td class="droppable">
+                <img src="https://en.js.cx/clipart/soccer-gate.svg" id="gate" >
+            </td>
+            <td class="droppable">
+                <img src="https://en.js.cx/clipart/soccer-gate.svg" id="gate">
+            </td>
+            <td class="droppable">
+                <img src="https://en.js.cx/clipart/soccer-gate.svg" id="gate">
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
